# camera-parts-parser

./: .gitignore  README.md  camera_parts.csv  camera_parts.xlsx  logging_config.py  main.py  pyproject.toml
export/: camera_parts.csv  camera_parts.xlsx  data.csv  data.xlsx
modules/: call.py  converter.py  export.py  scraper.py  url.py
